; ModuleID = '/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-data.c_listree_lookup_large_tree.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-data.c_listree_lookup_large_tree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8** }

@NIL = common dso_local global i64 0, align 8
@TF_MINUS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.TYPE_3__*, i32, i32*)* @listree_lookup_large_tree to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @listree_lookup_large_tree(%struct.TYPE_3__* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i8**, i8*** %10, align 8
  %12 = load i8*, i8** %11, align 8
  %13 = call i64 @SMALL_NODE(i8* %12)
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @tree_ext_lookup(i64 %13, i32 %14)
  %16 = call i8* @LARGE_NODE(i32 %15)
  store i8* %16, i8** %8, align 8
  %17 = load i8*, i8** %8, align 8
  %18 = call i64 @SMALL_NODE(i8* %17)
  %19 = load i64, i64* @NIL, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %22

21:                                               ; preds = %3
  store i8* inttoptr (i64 -1 to i8*), i8** %4, align 8
  br label %30

22:                                               ; preds = %3
  %23 = load i8*, i8** %8, align 8
  %24 = call i64 @NODE_TYPE(i8* %23)
  %25 = load i64, i64* @TF_MINUS, align 8
  %26 = icmp eq i64 %24, %25
  br i1 %26, label %27, label %28

27:                                               ; preds = %22
  store i8* null, i8** %4, align 8
  br label %30

28:                                               ; preds = %22
  %29 = load i8*, i8** %8, align 8
  store i8* %29, i8** %4, align 8
  br label %30

30:                                               ; preds = %28, %27, %21
  %31 = load i8*, i8** %4, align 8
  ret i8* %31
}

declare dso_local i8* @LARGE_NODE(i32) #1

declare dso_local i32 @tree_ext_lookup(i64, i32) #1

declare dso_local i64 @SMALL_NODE(i8*) #1

declare dso_local i64 @NODE_TYPE(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
